fixed community height bug on mobile

--- a/src/pages/Community/Community.css
+++ b/src/pages/Community/Community.css
@@ -62,6 +62,9 @@
   .cta-section h1 {
     font-size: 28px;
   }
+  .community-container {
+    height: 80vh;
+  }
 
   .cta-section p {
     font-size: 16px;
